fixed issue with about section where column 2 was overflowing

--- a/styles.css
+++ b/styles.css
@@ -115,11 +115,12 @@ section {
 }
 
 .about-col-1 {
-  flex-basis: 60%;
+  flex-basis: 50%;
 }
 
 .about-col-2 {
-  flex-basis: 35%;
+  flex-basis: 25%;
+  margin-right: 10%;
 }
 
 .about-col-2 img {
